--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
         "prettier-plugin-tailwindcss": "^0.6.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.3.0",
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "flowbite": "^3.1.2",
-        "flowbite-react": "^0.11.7",
+        "flowbite": "^2.5.2",
+        "flowbite-react": "^0.10.2",
         "framer-motion": "^12.12.1",
         "lucide-react": "^0.511.0",
         "react-intersection-observer": "^9.16.0",
         "react-router": "^7.6.0",
+        "react-router-dom": "^7.6.0",
         "simplebar-react": "^3.3.1"
     }
 }
