--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
         "@iconify/react": "^6.0.0",
-        "@inertiajs/react": "^2.0.0",
+        "@inertiajs/react": "^2.0.11",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/line-clamp": "^0.4.4",
         "@tailwindcss/vite": "^4.0.0",
@@ -33,6 +33,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@inertiajs/core": "^2.0.11",
         "flowbite": "^2.5.2",
         "flowbite-react": "^0.10.2",
         "framer-motion": "^12.12.1",
