--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-intersection-observer": "^9.16.0",
         "react-router": "^7.6.0",
         "react-router-dom": "^7.6.0",
+        "react-toastify": "^11.0.5",
         "simplebar-react": "^3.3.1",
         "ziggy-js": "^2.5.3"
     }
