--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-router": "^7.6.0",
         "react-router-dom": "^7.6.0",
         "react-toastify": "^11.0.5",
+        "recharts": "^2.15.3",
         "simplebar-react": "^3.3.1",
         "ziggy-js": "^2.5.3"
     }
